// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordToggle component renders and matches a snapshot 1`] = `
<div
  className="field"
>
  <div
    className="control"
  >
    <div
      className="password-container"
    >
      <input
        autoComplete="off"
        className="input"
        disabled={false}
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        type="password"
      />
      <span
        className="toggle is-flex"
        onClick={[Function]}
      >
        show
      </span>
    </div>
  </div>
</div>
`;

exports[`PasswordToggle component renders and matches a snapshot when there is an error 1`] = `
<div
  className="field"
>
  <div
    className="control"
  >
    <div
      className="password-container"
    >
      <input
        autoComplete="password"
        className="input error"
        disabled={false}
        onBlur={[MockFunction]}
        onChange={[MockFunction]}
        placeholder="some placeholder"
        type="password"
      />
      <span
        className="toggle is-flex"
        onClick={[Function]}
      >
        show
      </span>
    </div>
    <span
      className="error"
    >
      something wrong happened
    </span>
  </div>
</div>
`;
